{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b043caff-4501-4a9b-8525-079fca4a5565",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8a078a55-b557-4595-9b74-ae2f74038a19",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "49230434-275b-4924-b64a-41578613e5c2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2d361447-9dc6-46ff-a7c6-c08eb6bc0602",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7f389bc7-b87f-4392-af9f-2caf8392d29d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f9d82bf6-34a9-4334-9d1c-b5e692655969",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "51c27781-8774-493b-a5bb-5ccc9e052a0d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac38c3f8-0e3c-4286-941b-e67fabdaf601",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "5cb07ad0-35ff-4d70-998f-76b3411016f0",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "61d60f15-cbb3-41c4-9302-7874b02d802d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6be41cde-2e36-421f-9b5e-33cefb9afb2c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad758a6d-af28-4715-8232-8320cf4b1c4e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "f36c2fbf-9feb-4e76-b6b5-cd9aa01c1f25",
            "actions": [
                {
                    "name": "CreateBattleScenario",
                    "type": "Button",
                    "id": "4ae65636-6f31-4c6d-9dba-37367e746aa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "099fdf62-62ac-49a2-b465-20ee18b5e503",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateBattleScenario",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}